# router/system/sys_base.go
@@ -1,0 +1,17 @@
+package system
+
+import (
+	"github.com/gin-gonic/gin"
+	v1 "meet_directly/api/v1"
+)
+
+type BaseRouter struct{}
+
+func (s *BaseRouter) InitBaseRouter(Router *gin.RouterGroup) (R gin.IRoutes) {
+	baseRouter := Router.Group("base")
+	baseApi := v1.ApiGroupApp.SystemApiGroup.BaseApi
+	{
+		baseRouter.POST("login", baseApi.Login)
+	}
+	return baseRouter
+}
